--- a/foxbox/index.html
+++ b/foxbox/index.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>FOXBOX</title>
-  <link href="/css/style.css" rel="stylesheet" type="text/css" />
+  <link href="./css/style.css" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="./images/img1.png" type="image/x-icon">
 </head>
 
