--- a/foxbox/index.html
+++ b/foxbox/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width">
   <title>FOXBOX</title>
   <link href="./foxbox/css/style.css" rel="stylesheet" type="text/css" />
-  <link rel="shortcut icon" href="./foxbox/images/img1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/img1.png" type="image/x-icon">
 </head>
 
 <body id="home">
