--- a/foxbox/index.html
+++ b/foxbox/index.html
@@ -20,10 +20,10 @@
       <h1 class="logo"><a href="">foxbox</a></h1>
       <nav class="header-menu">
         <ul class="list-itens">
-          <li><a class="stq" id="stq" href="./foxbox/html/estoque.html">Meu estoque</a></li>
+          <li><a class="stq" id="stq" href="./html/estoque.html">Meu estoque</a></li>
           <li><a href="#sobrenos">Sobre nós</a></li>
-          <li><a href="./foxbox/html/login.html">
-              <img src="./foxbox/images/login.png" id='btn-div' alt="login"></a>
+          <li><a href="./html/login.html">
+              <img src="./images/login.png" id='btn-div' alt="login"></a>
           </li>
         </ul>
       </nav>
@@ -37,12 +37,12 @@
       <nav class="principal-content">
         <ul class="principal-itens">
           <li>
-            <img src="./foxbox/images/logogrande.png" alt="login">
+            <img src="./images/logogrande.png" alt="login">
           </li>
           <li>
             <a>Seu estoque em um só lugar</a>
             <div class="btn">
-              <a href="./foxbox/html/login.html#cadastro"><button class="btn-cdt">cadastre-se</button></a>
+              <a href="./html/login.html#cadastro"><button class="btn-cdt">cadastre-se</button></a>
               <a href="#saibamais"><button class="btn-sm" >saiba mais →</button></a>
           </li>
         </ul>
@@ -57,7 +57,7 @@
         <p class="texto">Cadastre-se no nosso site e organize seu mercado, podendo
           colocar seus produtos e controlar suas vendas.
         </p>
-        <img src="./foxbox/images/caixa.png">
+        <img src="./images/caixa.png">
       </li>
     </ul>
   </main>
@@ -66,14 +66,14 @@
       <div class="responsivo">
         <div class="bloco">
           <div class="conteudo">
-            <img class="img-align"src="./foxbox/images/boneco.png">
+            <img class="img-align"src="./images/boneco.png">
             <p class="texto-align">Faça o login na sua conta após o cadastro e então cadastre seus produtos no <a style="color: rgb(255, 140, 0)" href="">MEU ESTOQUE.</a></p>
           </div>        
         </div>
 
         <div class="bloco">
           <div class="conteudo">
-            <img class="img-align"src="./foxbox/images/mais.png">
+            <img class="img-align"src="./images/mais.png">
             <p class="texto-align">Adicione seus produtos de forma rápida, 
               <a style="color: rgb(255, 140, 0)" href="">selecionando categorias</a>
                 e colocando a quantidade.</p>
@@ -82,7 +82,7 @@
 
         <div class="bloco">
           <div class="conteudo">
-            <img class="img-align2" src="./foxbox/images/msg.png">
+            <img class="img-align2" src="./images/msg.png">
             <p class="texto-align">Esteja de olho nas 
               <a style="color: rgb(255, 140, 0)" href="">mensagens de reposição</a>
                 de estoque e não esqueça de olhar sempre.</p>
@@ -112,7 +112,7 @@
       <p>© 2021,Projeto FoxBox - Todos os direitos reservados</p>
     </div>
   </footer>
-  <script src="/js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
