--- a/foxbox/html/estoque.html
+++ b/foxbox/html/estoque.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Meu estoque</title>
-  <link href="/css/estoque.css" rel="stylesheet" type="text/css" />
+  <link href="./css/estoque.css" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="./images/img1.png" type="image/x-icon">
 </head>
 
