--- a/foxbox/html/login.html
+++ b/foxbox/html/login.html
@@ -9,9 +9,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Login</title>
-  <link href="/css/login.css" rel="stylesheet" type="text/css" />
-  <link href="/css/cadastro.css" rel="stylesheet" type="text/css" />
-  <link rel="shortcut icon" href="/images/img1.png" type="image/x-icon">
+  <link href="./css/login.css" rel="stylesheet" type="text/css" />
+  <link href="./css/cadastro.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="./images/img1.png" type="image/x-icon">
 </head>
 </head>
 
@@ -44,7 +44,7 @@
         </div>
         </section>
       <div class="quadrado2">
-        <img class="imagem" src="/images/img3.png">
+        <img class="imagem" src="./images/img3.png">
       </div>
     </div>
   </main>
@@ -53,7 +53,7 @@
     <div class="quadrado1"></div>
     <div class="principal">
       <div class="quadrado2">
-        <img class="imagem" src="/images/img4.png">
+        <img class="imagem" src="./images/img4.png">
       </div>
       <section class="container-form">
         <div class="form-cadastro">
