--- a/foxbox/html/login.html
+++ b/foxbox/html/login.html
@@ -11,7 +11,7 @@
   <title>Login</title>
   <link href="../css/login.css" rel="stylesheet" type="text/css" />
   <link href="../css/cadastro.css" rel="stylesheet" type="text/css" />
-  <link rel="shortcut icon" href="./images/img1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../images/img1.png" type="image/x-icon">
 </head>
 </head>
 
@@ -44,7 +44,7 @@
         </div>
         </section>
       <div class="quadrado2">
-        <img class="imagem" src="./images/img3.png">
+        <img class="imagem" src="../images/img3.png">
       </div>
     </div>
   </main>
