--- a/foxbox/html/addpro.html
+++ b/foxbox/html/addpro.html
@@ -9,8 +9,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Adicionar Produtos</title>
-  <link href="./css/addpro.css" rel="stylesheet" type="text/css" />
-  <link rel="shortcut icon" href="./images/img1.png" type="image/x-icon">
+  <link href="../css/addpro.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="../images/img1.png" type="image/x-icon">
 </head>
 
 <body>
