--- a/foxbox/html/estoque.html
+++ b/foxbox/html/estoque.html
@@ -9,8 +9,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Meu estoque</title>
-  <link href="./css/estoque.css" rel="stylesheet" type="text/css" />
-  <link rel="shortcut icon" href="./images/img1.png" type="image/x-icon">
+  <link href="../css/estoque.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="../images/img1.png" type="image/x-icon">
 </head>
 
 <body>
@@ -19,10 +19,10 @@
       <h1 class="logo"><a href="../index.html">foxbox</a></h1>
       <nav class="header-menu">
         <ul class="list-itens">
-          <li><a href="./html/mensagem.html">
+          <li><a href="../html/mensagem.html">
               <img src="../images/msg.png" id='btn-div' alt="mensagem"></a>
           </li>
-          <li><a href="./html/login.html">
+          <li><a href="../html/login.html">
               <img src="../images/login.png" id='btn-div' alt="login"></a>
               <ul class="sair" id="sair"><li><a style="color: rgb(255, 140, 0)" >Sair</a></li></ul>
           </li>
