--- a/foxbox/index.html
+++ b/foxbox/index.html
@@ -67,7 +67,7 @@
         <div class="bloco">
           <div class="conteudo">
             <img class="img-align"src="./images/boneco.png">
-            <p class="texto-align">Faça o login na sua conta após o cadastro e então cadastre seus produtos no <a style="color: rgb(255, 140, 0)" href="">MEU ESTOQUE.</a></p>
+            <p class="texto-align">Faça o login na sua conta após o cadastro e então cadastre seus produtos no <a style="color: rgb(255, 140, 0)" href="./html/estoque.html">MEU ESTOQUE.</a></p>
           </div>        
         </div>
 
