--- a/foxbox/html/login.html
+++ b/foxbox/html/login.html
@@ -94,7 +94,7 @@
   var login = document.getElementById('email').value;
   var senha = document.getElementById('password').value;
   
-  if (login == "dastrevas14@gmail.com" && senha == 123456){ 
+  if (login == "projetoestoque22@gmail.com" && senha == 123456){ 
     window.location.href = "estoque.html";
     
   } else {
