--- a/foxbox/html/login.html
+++ b/foxbox/html/login.html
@@ -53,7 +53,7 @@
     <div class="quadrado1"></div>
     <div class="principal">
       <div class="quadrado2">
-        <img class="imagem" src="../images/img4.png">
+        <img class="imagem" src=".../images/img4.png">
       </div>
       <section class="container-form">
         <div class="form-cadastro">
