--- a/foxbox/html/login.html
+++ b/foxbox/html/login.html
@@ -115,7 +115,7 @@
     if (login = cadastro && senha = confirmsenha){
       window.location.href = "estoque.html";
     } else {
-    alert ('usuario ou senha incorretos');}
+    alert (' incorretos');}
   }
 
   </script>
