--- a/foxbox/html/login.html
+++ b/foxbox/html/login.html
@@ -91,7 +91,7 @@
   <script>
   /// logar ///
   function logar() {
-  var login = document.getElementById('email').value;
+  var login = document.getElementById('cd-email').value;
   var senha = document.getElementById('password').value;
   
   if (checar() = true){ 
