--- a/foxbox/html/login.html
+++ b/foxbox/html/login.html
@@ -94,7 +94,7 @@
   var login = document.getElementById('cd-email').value;
   var senha = document.getElementById('password').value;
   
-  if (checar() = true){ 
+  if (  login = cadastro && senha = confirmsenha , checar()){ 
     window.location.href = "estoque.html";
     
   } else {
