--- a/foxbox/html/login.html
+++ b/foxbox/html/login.html
@@ -94,7 +94,7 @@
   var login = document.getElementById('cd-email').value;
   var senha = document.getElementById('password').value;
   
-  if (  login = cadastro && senha = confirmsenha , checar()){ 
+  if (  login = "projetoestoque22@gmail.com" && senha = '123456'){ 
     window.location.href = "estoque.html";
     
   } else {
@@ -110,12 +110,6 @@
       alert('cadastrado');
     } else {
       alert ('n cadastrado');}
-  }
-  function checar() {
-    if (login = cadastro && senha = confirmsenha){
-      window.location.href = "estoque.html";
-    } else {
-    alert (' incorretos');}
   }
 
   </script>
