--- a/foxbox/html/login.html
+++ b/foxbox/html/login.html
@@ -91,10 +91,10 @@
   <script>
   /// logar ///
   function logar() {
-  var login = document.getElementById('cd-email').value;
+  var login = document.getElementById('email').value;
   var senha = document.getElementById('password').value;
   
-  if (  login = "projetoestoque22@gmail.com" && senha = '123456'){ 
+  if (login == "dastrevas14@gmail.com" && senha == 123456){ 
     window.location.href = "estoque.html";
     
   } else {
